<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karla00058615.contactos.EditFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageContact2"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:src="@drawable/contact"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"/>


    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/editar_nombre"
        android:textColorHint="#000"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageContact2"
        android:textColor="#000"/>


    <EditText
        android:id="@+id/edit_Direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColorHint="#000"
        android:hint="@string/editar_direccion"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_Name"
        android:layout_marginTop="8dp"
        android:textColor="#000" />

    <EditText
        android:textColorHint="#000"
        android:id="@+id/edit_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/edit_Name"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/editar_correo"
        android:textColor="#000" />

    <EditText
        android:ellipsize="end"
        android:textColorHint="#000"
        android:id="@+id/edit_Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonAccept"
        android:layout_marginLeft="50dp"
        android:hint="@string/editar_fecha"
        android:textColor="#000"
        android:textSize="16sp" />

    <EditText
        android:textColorHint="#000"
        android:id="@+id/edit_Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/editar_telefono"
        android:layout_below="@+id/edit_Name"
        android:layout_toRightOf="@+id/edit_Name"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="5dp"
        android:textColor="#000" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginLeft="260dp"
        android:layout_below="@id/edit_Telefono"
        android:layout_marginTop="40dp"/>

</RelativeLayout>
